Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18192

Cannot "Fetch snippets" from pastebin.ca

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.3.0
    • Qt Creator 4.2.2, Qt Creator 4.3.0-rc1
    • All Other Issues
    • None
    • Ubuntu 16.04 LTS 64 bit
    • ff6a20687dbf008d1ffafb4a01a9cd72a8045227

      1. Open "Tools" -> "Code Pasting" -> "Fetch Snippet...".
      2. Select the Protocol "Pastebin.Ca".
        The list of available snippets will remain empty.
      3. Type the id of an existing past in "Paste" and click "OK".
        In "General Messages" you can read something like "Empty snippet received for "Pastebin.Ca: 3810993"."

      Creator should show the list of snippets available on the server. When providing an id, Creator should be able to download this text.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cstenger Christian Stenger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes