CPaster: Fix URLs for pastebin.ca

Protocol switched to HTTPS recently.

Task-number: QTCREATORBUG-18192
Change-Id: I467534142478f5511e645a2e959ad3422640a0a6
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>